--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -17,15 +17,22 @@
   color: gray;
   background-color: blue;
   border: transparent;
+}
+
+.infoCardContainer--vintage {
+  background-color: #EDCFD1;
+}
+
+.infoCardContainer--metal {
+  background-color: #e1e1e1;
+}
+
+.infoCardContainer {
   max-width: 1260px;
   margin: 0 auto;
   padding: 0;
 }
 
-.infoCardContainer--vintage {
-  background-color: #edcfd1;
-}
-
-.infoCardContainer--metal {
-  background-color: #e1e1e1;
+.infoCardContainer :hover {
+  background-color: white;
 }
